--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,3 +8,27 @@ dependencies = [
     "fastapi>=0.115.13",
     "uvicorn>=0.34.3",
 ]
+
+[dependency-groups]
+dev = [
+    "ruff>=0.12.0",
+]
+
+[tool.ruff]
+line-length = 100
+
+[tool.ruff.lint]
+select = [
+    "N",    # pep8-naming
+    "E",    # pycodestyle errors
+    "F",    # pyflakes
+    "I",    # isort
+    "C",    # flake8-comprehensions
+    "B",    # flake8-bugbear
+    "UP",   # pyupgrade
+    "PD",   # pandas vet
+    "NPY",  # NumPy-specific rules
+]
+ignore = [
+    "PD002", # Inplace inconsistency
+]
