--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.115.13",
+    "pandas>=2.3.0",
     "sqlmodel>=0.0.24",
     "uvicorn>=0.34.3",
 ]
