--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,6 @@
 {
     "files.exclude": {
         ".venv/**/*": true,
-        "**/__pycache__/": true,
-        "**/*.py[oc]": true,
-        "**/build/": true,
-        "**/dist/": true,
-        "**/wheels/": true,
-        "**/*.egg-info": true,
-        "**/.venv": true,
-        "**/.db": true,
-        "**/.env": true
+        ".pytest_cache/**/*": true
     }
 }
